samples/_failures_safe/1761658810_4ddcd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a1b128.c: In function ‘main’:
./samples/SAFE/__tmp_d7a1b128.c:186:9: error: expected declaration or statement at end of input
  186 |         if (fgets(input, sizeof(input), stdin) == NULL) {
      |         ^~
./samples/SAFE/__tmp_d7a1b128.c:186:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7a1b128.c:186:9: error: expected declaration or statement at end of input
